--- a/package.json
+++ b/package.json
@@ -15,14 +15,13 @@
 	"main": "src/index.js",
 	"scripts": {
 		"start": "npm run compile -- --watch",
-		"test": "eslint --cache *.js src && echo ✓",
+		"test": "eslint --cache --ext .js --ext .jsx *.js src && echo ✓",
 		"compile": "faucet --compact"
 	},
-	"dependencies": {
-		"lit-html": "^1.0.0"
-	},
+	"dependencies": {},
 	"devDependencies": {
-		"eslint-config-fnd": "^1.6.0",
-		"faucet-pipeline-js": "~1.1.1"
+		"complate-dom": "^1.2.0",
+		"eslint-config-fnd-jsx": "^1.6.0",
+		"faucet-pipeline-jsx": "~1.1.1"
 	}
 }
